--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "google-auth-library": "^9.0.0"
   }
 }
