--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.19.0",
+    "google-auth-library": "^9.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.13.0",
-    "google-auth-library": "^9.0.0"
+    "pg": "^8.13.0"
   }
 }
